--- a/css/style.css
+++ b/css/style.css
@@ -60,10 +60,14 @@ header nav.navbar {
   padding: 15px 0;
 }
 header nav.navbar .nav-link {
+  font-weight: 500;
   margin-left: 20px;
   color: #0a3366;
   display: flex;
   align-items: center;
+}
+header nav.navbar .nav-link:hover {
+  color: #f46700;
 }
 header nav.navbar .nav-link::after {
   content: "";
@@ -529,6 +533,7 @@ h1,
 }
 .products-wrap .nav-tabs .nav-link {
   font-size: 16px;
+  font-weight: 500;
   color: #0a3366;
   padding: 10px 26px;
   border-radius: 50px;
@@ -597,6 +602,7 @@ h1,
 
 .arrow-btn {
   width: 55px;
+  min-width: 55px;
   height: 55px;
   border-radius: 50%;
   color: #0a3366;
@@ -1100,6 +1106,102 @@ form .form-control {
 }
 .price-breakouts-list li:last-child {
   color: #0a3366;
+}
+
+.thank-you-content h1 {
+  margin-top: 20px;
+}
+.thank-you-content p {
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+#offcanvasCart {
+  width: 460px;
+}
+#offcanvasCart .offcanvas-header {
+  display: block;
+}
+#offcanvasCart h3 {
+  font-size: 19px;
+  font-weight: 600;
+  color: #0a3366;
+  margin: 24px 20px 0 20px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1019607843);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+#offcanvasCart h3 .cart-count {
+  font-size: 14px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #f46700;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+#offcanvasCart .offcanvas-body {
+  padding: 0 30px;
+  padding-bottom: 124px;
+  overflow: scroll;
+}
+
+.cart-items li {
+  display: flex;
+  padding: 20px 0;
+  align-items: center;
+  gap: 15px;
+}
+.cart-items li + li {
+  border-top: 1px solid rgba(0, 0, 0, 0.1019607843);
+}
+.cart-items li .cart-item-img {
+  width: 90px;
+  height: 90px;
+  border-radius: 15px;
+  overflow: hidden;
+}
+.cart-items li .cart-item-content h5 {
+  font-size: 17px;
+  font-weight: 600;
+  color: #0a3366;
+  margin-bottom: 10px;
+}
+.cart-items li .cart-item-content p {
+  font-size: 18px;
+  font-weight: 600;
+  color: #0a3366;
+}
+.cart-items li .remove-btn {
+  margin-left: auto;
+  color: #f46700;
+  transition: all ease-in-out 0.3s;
+}
+.cart-items li .remove-btn:hover {
+  color: #0a3366;
+}
+
+.cart-total {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0 30px 20px 30px;
+}
+.cart-total h4 {
+  font-size: 22px;
+  font-weight: 600;
+  color: #0a3366;
+  padding-top: 20px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1019607843);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @media (min-width: 767px) {
