--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,10 +66,15 @@ header {
     padding: 15px 0;
 
     .nav-link {
+      font-weight: 500;
       margin-left: 20px;
       color: $primary-color;
       display: flex;
       align-items: center;
+
+      &:hover {
+        color: $secondary-color;
+      }
 
       &::after {
         content: "";
@@ -606,6 +611,7 @@ h1,
 
     .nav-link {
       font-size: 16px;
+      font-weight: 500;
       color: $primary-color;
       padding: 10px 26px;
       border-radius: 50px;
@@ -686,6 +692,7 @@ h1,
 
 .arrow-btn {
   width: 55px;
+  min-width: 55px;
   height: 55px;
   border-radius: 50%;
   color: $primary-color;
@@ -1263,6 +1270,120 @@ form {
     &:last-child {
       color: $primary-color;
     }
+  }
+}
+
+.thank-you-content {
+  h1 {
+    margin-top: 20px;
+  }
+
+  p {
+    font-size: 18px;
+    margin-top: 20px;
+  }
+}
+
+#offcanvasCart {
+  width: 460px;
+
+  .offcanvas-header {
+    display: block;
+  }
+
+  h3 {
+    font-size: 19px;
+    font-weight: 600;
+    color: $primary-color;
+    margin: 24px 20px 0 20px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #0000001a;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    .cart-count {
+      font-size: 14px;
+      font-weight: 500;
+      color: #fff;
+      background-color: $secondary-color;
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+    }
+  }
+
+  .offcanvas-body {
+    padding: 0 30px;
+    padding-bottom: 124px;
+    overflow: scroll;
+  }
+}
+
+.cart-items {
+  li {
+    display: flex;
+    padding: 20px 0;
+    align-items: center;
+    gap: 15px;
+
+    & + li {
+      border-top: 1px solid #0000001a;
+    }
+
+    .cart-item-img {
+      width: 90px;
+      height: 90px;
+      border-radius: 15px;
+      overflow: hidden;
+    }
+
+    .cart-item-content {
+      h5 {
+        font-size: 17px;
+        font-weight: 600;
+        color: $primary-color;
+        margin-bottom: 10px;
+      }
+
+      p {
+        font-size: 18px;
+        font-weight: 600;
+        color: $primary-color;
+      }
+    }
+
+    .remove-btn {
+      margin-left: auto;
+      color: #f46700;
+      transition: all ease-in-out 0.3s;
+
+      &:hover {
+        color: $primary-color;
+      }
+    }
+  }
+}
+
+.cart-total {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 0 30px 20px 30px;
+
+  h4 {
+    font-size: 22px;
+    font-weight: 600;
+    color: $primary-color;
+    padding-top: 20px;
+    border-top: 1px solid #0000001a;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 
