--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,7 @@ h1,
 }
 
 .products-wrap .nav-tabs {
-  margin: 40px 0;
+  margin: 20px 0;
   border: 0;
   gap: 15px;
 }
@@ -562,6 +562,7 @@ h1,
   background-color: #fff;
   border-radius: 15px;
   overflow: hidden;
+  width: 100%;
 }
 .product-item:hover .product-icons {
   bottom: 15px;
@@ -569,6 +570,10 @@ h1,
 .product-item .product-img {
   position: relative;
   overflow: hidden;
+}
+.product-item .product-img img {
+  top: 0;
+  transition: all ease-in-out 0.3s;
 }
 .product-item .product-content {
   display: flex;
@@ -585,7 +590,7 @@ h1,
 }
 
 .price {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 25px;
   text-decoration: none;
   margin-top: 5px;
@@ -637,6 +642,9 @@ h1,
   align-items: center;
   justify-content: center;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+.product-icons li .wishlist-btn.active svg {
+  fill: #fff;
 }
 .product-icons li:first-child a {
   background-color: #0a3366;
@@ -959,6 +967,10 @@ footer .footer-copyright {
   padding: 25px 0;
 }
 
+.swiper-slide .product-item {
+  min-height: 450px;
+}
+
 .product-item {
   margin-top: 30px;
 }
@@ -1204,19 +1216,9 @@ form .form-control {
   justify-content: space-between;
 }
 
-@media (min-width: 767px) {
-  .modal-dialog {
-    max-width: 720px;
-  }
-}
 @media (min-width: 1900px) {
   .banner-img {
     right: 300px;
-  }
-}
-@media (max-width: 1900px) {
-  .skin-care-slider .swiper-slide .skin-care-box {
-    min-width: 640px;
   }
 }
 @media (max-width: 1320px) {
