--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,6 +115,27 @@ header {
       li + li {
         margin-left: 15px;
       }
+
+      li {
+        a {
+          position: relative;
+          span {
+            width: 24px;
+            height: 24px;
+            background-color: $secondary-color;
+            color: #fff;
+            font-size: 14px;
+            font-weight: 600;
+            border-radius: 50%;
+            position: absolute;
+            top: -5px;
+            right: -10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+        }
+      }
     }
   }
 }
