work on the functionalities

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1483,6 +1483,7 @@ form {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0;
     padding-top: 20px;
     border-top: 1px solid #0000001a;
 
