--- a/css/style.css
+++ b/css/style.css
@@ -1282,6 +1282,7 @@ form .form-control {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0;
   padding-top: 20px;
   border-top: 1px solid rgba(0, 0, 0, 0.1019607843);
 }
